--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
   box-sizing: border-box;
 }
 
-.background {
-  background-color: #eeeeee;
+body {
+  background-color: #666;
   margin: 0;
   padding: 0;
 }
@@ -15,7 +15,26 @@
   transform: translate(-50%, -50%);
 }
 
+.logo {
+  width: 200px;
+  height: 100px;
+  background-color: #fff;
+  margin: 0 auto 30px auto;
+  font-size: 24px;
+/* 임시 지정 부분 */
+  font-weight: bold;
+  line-height: 100px;
+  text-align: center;
+}
+
+.title {
+  text-align: center;
+  margin: 0 auto 30px auto;
+}
+
 .login-box {
-  radius: 5px;
+  border-radius: 5px;
+  width: 400px;
+  height: 300px;
   background-color: #fff;
 }
